<resources>
    <string name="app_name">WeatherApp</string>
    <string name="mobile_no">Mobile Number<html><font color="red">*</font></html></string>
    <string name="full_name">Full Name<html><font color="red">*</font></html></string>
    <string name="gender">Gender<html><font color="red">*</font></html></string>
    <string name="dob">DOB<html><font color="red">*</font></html></string>
    <string name="address_line1">Address Line 1<html><font color="red">*</font></html></string>
    <string name="address_line2">Address Line 2</string>
    <string name="pincode">Pin Code<html><font color="red">*</font></html></string>
    <string name="Check">check</string>
    <string name="district">District</string>
    <string name="state">State</string>
    <string name="Register">Register</string>
    <string name="city_name">City Name</string>
    <string name="show_results">Show Results</string>
</resources>