<?xml version="1.0" encoding="utf-8"?>
<ScrollView   xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="5dp"
    android:padding="2dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="30dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.registration.RegistrationActivity">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_number"
            
            
            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_no"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="phone"
                android:maxLength="10"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/full_name"
            
            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobile_number"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLength="50"
                android:inputType="textPersonName"
                android:layout_height="wrap_content"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/gender_menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            

            app:layout_constraintTop_toBottomOf="@id/full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender">

            <AutoCompleteTextView
                android:id="@+id/gender_auto_complete_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dob"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            

            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/gender_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:focusable="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:focusableInTouchMode="false"
                android:drawableRight="@drawable/icon_calender"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/icon_calender" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_line1"
            

            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dob"
            android:layout_height="wrap_content"
            android:hint="@string/address_line1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLength="50"
                android:inputType="textPostalAddress"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/address_line2"
            

            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line1"
            android:layout_height="wrap_content"
            android:hint="@string/address_line2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:maxLength="50"
                android:inputType="textPostalAddress"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/pincode_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line2">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pincode"
                
    
                android:layout_width="0dp"
                android:layout_weight="2"
                app:counterEnabled="true"
                app:counterMaxLength="6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line1"
                android:layout_height="wrap_content"
                android:hint="@string/pincode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:maxLength="6"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_check_pin_code"
                android:layout_weight="1"
                android:padding="15dp"
                android:layout_marginEnd="5dp"
                android:layout_marginLeft="5dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/Check"
                android:layout_marginStart="5dp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/district_menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            

            app:layout_constraintTop_toBottomOf="@id/pincode_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/district">

            <AutoCompleteTextView
                android:id="@+id/district_auto_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/state_menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="20sp"
            app:layout_constraintTop_toBottomOf="@id/district_menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/state">

            <AutoCompleteTextView
                android:id="@+id/state_auto_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_reg"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="20sp"
            app:layout_constraintTop_toBottomOf="@id/state_menu"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:layout_height="wrap_content"
            android:text="@string/Register"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
